# second-brain-os

./: .gitignore  BUILD_PLAN.md  COMPLETE_IDEA.md  COWORK_BRIEF.md  LICENSE  README.md  START_HERE.md
second-brain/: .env.example  .gitignore  capture.html  package-lock.json  package.json  vite.config.ts
second-brain/src/: App.css  App.tsx  capture.tsx  vite-env.d.ts
second-brain/src-tauri/: Cargo.toml  tauri.conf.json
second-brain/src-tauri/capabilities/: capture.json  default.json
second-brain/src-tauri/migrations/: 0001_initial.sql
second-brain/src-tauri/src/: lib.rs
second-brain/src/capture/: CaptureBar.tsx  capture.css
second-brain/src/lib/: ai.ts  brief.ts  clipboard.ts  commitments.ts  db.ts  embeddings.ts  processor.ts  tasks.ts
second-brain/src/views/: Commitments.tsx  Inbox.tsx  Schedule.tsx  Search.tsx  Today.tsx
